--- a/src/index.html
+++ b/src/index.html
@@ -1,57 +1,21 @@
 <!DOCTYPE html>
-
-<!--
-  TODO:
-  * change site-title
-  * add meta description content
-  * change apple-mobile-web-app-title
-  * adapt theme colors
-  * create new images/icon-touch, eg. with https://realfavicongenerator.net/
--->
-
-<html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Your title here!</title>
-    <meta name="description" content="This wonderful site..." />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="referrer" content="same-origin" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no" />
-
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="Web Starter Kit" />
-    <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png" />
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit" />
-    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png" />
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png" />
-    <meta name="msapplication-TileColor" content="#2F3BA2" />
-
-    <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2" />
-
-    <!--
-      SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones
-    -->
-    <!-- <link rel="canonical" href="http://www.example.com/"> -->
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>" />
-  </head>
-
-  <body>
-    <h1>Welcome to the baboilerplate!</h1>
-    <div id="root"></div>
-    <!-- <div id="telljoke"></div> -->
-    <!-- <div id="addjoke"></div> -->
-
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-  </body>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>QuizzzApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="stylesheet" href="webfontkit-20181225-061723/stylesheet.css"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
+</head>
+<body>
+    <%= require('./partials/_header.html') %>
+  
+  <main>
+    <!--<div id="root"></div>-->
+    <%= require('./partials/_login.html') %>
+  </main>
+  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+</body>
 </html>
