--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,8 @@
   <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 <body>
-    <%= require('./partials/_header.html') %>
-  
+  <header></header>
   <main>
-    <!--<div id="root"></div>-->
     <%= require('./partials/_login.html') %>
   </main>
   <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
