--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 <body>
-    <%= require('./partials/_header.html') %>
-  
+    <header class='header'>
+        <div id='header_left' class='header__div header__div--left'>
+          <img src="<%= require('./images/QA_logo_white.svg') %>" alt='App-Logo' id='header_logo' class='header__img'}></img>
+        </div>
+        </header>
   <main>
-    <!--<div id="root"></div>-->
-    <%= require('./partials/_login.html') %>
   </main>
   <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
