too many changes

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,13 @@
   <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 <body>
-    <header class='header'>
+    <!-- <header class='header'>
         <div id='header_left' class='header__div header__div--left'>
-          <img src="<%= require('./images/QA_logo_white.svg') %>" alt='App-Logo' id='header_logo' class='header__img'}></img>
+          <a href="/">
+          <img src="<%= require('./images/QA_logo_white.svg') %>" alt='App-Logo' id='header_logo' class='header__img' onclick="{() => }"></img>
+          </a>
         </div>
-        </header>
+        </header> -->
   <main>
   </main>
   <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
