--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="<%= require('./images/android-chrome-192x192.png') %>">
   <link rel="icon" type="image/png" sizes="16x16" href="<%= require('./images/favicon-16x16.png') %>">
   <link rel="mask-icon" href="<%= require('./images/safari-pinned-tab.svg') %>" color="#0051a8">
+  <link rel="icon" href="<%= require('./images/favicon.png') %>">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#0051a8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
