--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="<%= require('./images/favicon-16x16.png') %>">
   <link rel="mask-icon" href="<%= require('./images/safari-pinned-tab.svg') %>" color="#0051a8">
   <link rel="icon" href="<%= require('./images/favicon.png') %>">
+  <link rel="manifest" href="./site.webmanifest">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#0051a8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
