--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#0051a8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="QuizzzApp: Play in single- and multiplayer mode or challenges someone!"/>
   <!-- <link rel="stylesheet" href="webfontkit-20181225-061723/stylesheet.css"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
